VA-1446 Fix inner header spacing (#76)
* VA-1446 fix inner header space when no title

* remove order as display is not sat up anywhere else

--- a/src/styles/document-export-page.css
+++ b/src/styles/document-export-page.css
@@ -180,7 +180,12 @@
 
 /* No title threshold */
 
-.joubel-create-document.responsive.no-title .joubel-exportable-header-text {
-  display: none;
-  order: 1;
+.joubel-create-document.responsive.no-title {
+  .joubel-exportable-header-text {
+    display: none;
+  }
+
+  .joubel-exportable-header-inner {
+    justify-content: flex-end;
+  }
 }
